# Conversion-xml-and-dict

./: .gitignore  LICENSE  Makefile  README.md  config_file  input.cpp  input.h  library.cpp  library.h  prog.cpp  test
documentation/: config_file
documentation/html/: annotated.html  classes.html  dir_684fa5c5e4cabec14ab59e41caa6242f.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  input_8h.html  input_8h__dep__incl.map  input_8h__dep__incl.md5  input_8h_source.html  library_8h.html  library_8h__dep__incl.map  library_8h__dep__incl.md5  library_8h_source.html  md__home_simba_oop2024_1_README.html  pages.html  prog_8cpp.html  prog_8cpp__incl.map  (+4 more)
html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  input_8h.html  input_8h__dep__incl.map  input_8h__dep__incl.md5  input_8h_source.html  library_8h.html  library_8h__dep__incl.map  library_8h__dep__incl.md5  library_8h_source.html  md_README.html  pages.html  prog_8cpp.html  prog_8cpp__incl.map  prog_8cpp__incl.md5  structdict-members.html  structdict.html  structdict__coll__graph.map
lab/: CMakeLists.txt  library.cpp  library.h  prog.cpp
lab/files/: coverage.css  coverage.html  library.cpp  library.h  library_dialog.cpp  library_dialog.h  prog.cpp
latex/: annotated.tex  files.tex  input_8h.tex  input_8h__dep__incl.md5  library_8h.tex  library_8h__dep__incl.md5  prog_8cpp.tex  prog_8cpp__incl.md5  refman.tex  structdict.tex  structdict__coll__graph.md5
(+35 files in other folders)
